# sapling

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md
crates/sapling/: CHANGELOG.md  Cargo.toml
crates/sapling-py/: CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
crates/sapling-py/python/sapling/: __init__.py  __init__.pyi
crates/sapling-py/src/: lib.rs
crates/sapling-py/tests/: test_basic.py
crates/sapling/src/: cli.rs  grammar.rs  lib.rs  validate.rs
crates/sapling/src/grammar/: rules.rs
crates/sapling/tests/: cli_help.rs  cli_integration.rs  doctest_examples.rs
docs/plans/cs/: 2025-11-06-1815-rust-native-parser-generator-roadmap.md
